---
NTP 4.2.8p17 (Harlan Stenn <stenn@ntp.org>, 2023 Jun 06)

Focus: Bug fixes

Severity: HIGH (for people running 4.2.8p16)

This release:

- fixes 3 bugs, including a regression
- adds new unit tests

Details below:

* [Bug 3824] Spurious "ntpd: daemon failed to notify parent!" logged at
             event_sync.  Reported by Edward McGuire.  <hart@ntp.org>
* [Bug 3822] ntpd significantly delays first poll of servers specified by name.
             <hart@ntp.org>  Miroslav Lichvar identified regression in 4.2.8p16.
* [Bug 3821] 4.2.8p16 misreads hex authentication keys, won't interop with
             4.2.8p15 or earlier.  Reported by Matt Nordhoff, thanks to
	     Miroslav Lichvar and Matt for rapid testing and identifying the
	     problem. <hart@ntp.org>
* Add tests/libntp/digests.c to catch regressions reading keys file or with
  symmetric authentication digest output.

---
NTP 4.2.8p16 (Harlan Stenn <stenn@ntp.org>, 2023 May 30)

Focus: Security, Bug fixes

Severity: LOW

This release:

- fixes 4 vulnerabilities (3 LOW and 1 None severity), 
- fixes 46 bugs
- includes 15 general improvements
- adds support for OpenSSL-3.0

Details below:

* [Sec 3808] Assertion failure in ntpq on malformed RT-11 date <perlinger@ntp.org>
* [Sec 3807] praecis_parse() in the Palisade refclock driver has a
             hypothetical input buffer overflow. Reported by ... stenn@
* [Sec 3806] libntp/mstolfp.c needs bounds checking <perlinger@ntp.org>
  - solved numerically instead of using string manipulation
* [Sec 3767] An OOB KoD RATE value triggers an assertion when debug is enabled.
             <stenn@ntp.org>
* [Bug 3819] Updated libopts/Makefile.am was missing NTP_HARD_* values. <stenn@>
* [Bug 3817] Bounds-check "tos floor" configuration. <hart@ntp.org>
* [Bug 3814] First poll delay of new or cleared associations miscalculated.
             <hart@ntp.org>
* [Bug 3802] ntp-keygen -I default identity modulus bits too small for